--- a/BTL_Web/WebQLCuaHangThucPham/WebQLCuaHangThucPham/Content/Frond/css/base.css
+++ b/BTL_Web/WebQLCuaHangThucPham/WebQLCuaHangThucPham/Content/Frond/css/base.css
@@ -935,5 +935,7 @@ footer .info p {
     .mb-menu {
         display: none !important;
     }
-
+    .container {
+        max-width: 1300px;
+    }
 }
