--- a/BTL_Web/WebQLCuaHangThucPham/WebQLCuaHangThucPham/Views/Login/DangNhap.cshtml
+++ b/BTL_Web/WebQLCuaHangThucPham/WebQLCuaHangThucPham/Views/Login/DangNhap.cshtml
@@ -21,7 +21,7 @@
                 @Html.Password("txtMatKhau", "", new { @class = "form-control rounded-left", @placeholder = "Password" })
             </div>
             <div class="button d-flex justify-content-between">
-                <button type="submit" class="btnlogin colormain">đăng nhập</button>
+                <button type="button" class="btnlogin colormain">đăng nhập</button>
                 <button type="button" class="btnregis colorgray">đăng ký</button>
             </div>
             <div class="login__info__desc d-flex ">
