--- a/BTL_Web/WebQLCuaHangThucPham/WebQLCuaHangThucPham/Views/ThanhToan/Index.cshtml
+++ b/BTL_Web/WebQLCuaHangThucPham/WebQLCuaHangThucPham/Views/ThanhToan/Index.cshtml
@@ -14,19 +14,19 @@
                 <form action="">
                     <div class="input">
                         <label for="">Tên <sup>*</sup></label>
-                        <input type="text">
+                        <input type="text" value="@CurrentUser.TenKH" readonly>
                     </div>
                     <div class="input">
                         <label for="">Địa chỉ <sup>*</sup></label>
-                        <input type="text">
+                        <input type="text" value="@CurrentUser.DiaChi" readonly>
                     </div>
                     <div class="input">
                         <label for="">Số điện thoại <sup>*</sup></label>
-                        <input type="text">
+                        <input type="text" value="@CurrentUser.SDT" readonly>
                     </div>
                     <div class="input">
                         <label for="">Địa chỉ email <sup>*</sup></label>
-                        <input type="email">
+                        <input type="email" value="@CurrentUser.Email" readonly>
                     </div>
                     <div class="input">
                         <label for="">Ghi chú đơn hàng (tuỳ chọn)</label>
