--- a/BTL_Web/WebQLCuaHangThucPham/WebQLCuaHangThucPham/Views/Shared/_LayoutTrangChu.cshtml
+++ b/BTL_Web/WebQLCuaHangThucPham/WebQLCuaHangThucPham/Views/Shared/_LayoutTrangChu.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using WebQLCuaHangThucPham.Models
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -45,9 +46,20 @@
                 <ul class="header__icon d-flex align-items-center ">
                     <li><i class="fa-solid fa-magnifying-glass icon-search"></i></li>
                     @Html.Action("CartGioHang", "GioHang")
-                    <li> <i class="fa-solid fa-user icon-login"></i></li>
-                    <li id="username"><i class="fa-solid fa-right-from-bracket"></i></li>
+                    @*chưa đăng nhập*@
+                    @if (CurrentUser.MaKH == 0)
+                    {
+                        <li> <i class="fa-solid fa-user icon-login"></i></li>
+                    }
 
+                    @*//Đã đăng nhập*@
+                    @if (CurrentUser.MaKH != 0)
+                    {
+                        <li style="margin-left:3rem">@CurrentUser.TenKH</li>
+                        <li style="margin-left:.5rem">
+                            <a href="~/Login/DangXuat"><i class="fa-solid fa-right-from-bracket"></i></a>
+                        </li>
+                    }
                 </ul>
             </div>
             <div class="mb-menu d-flex align-items-center justify-content-between w-100">
@@ -69,7 +81,6 @@
                         </div>
                     </li>
                 </ul>
-
             </div>
         </div>
     </header>
@@ -94,7 +105,6 @@
                                 <img src="~/Content/Frond/img/imgslide22.png" alt="imgslide13">
                             </div>
                         </div>
-
                     </div>
                     <div class="carousel-item ">
                         <div class="item__info">
@@ -276,7 +286,6 @@
                 </div>
             </div>
         </div>
-
     </section>
     <!-- footer -->
     <footer>
@@ -342,11 +351,11 @@
         </ul>
         <i class="fa-solid fa-xmark close-search"></i>
     </div>
-
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
@@ -357,5 +366,4 @@
         integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="~/Content/Frond/js/base.js"></script>
-
 </html>
