--- a/BTL_Web/WebQLCuaHangThucPham/WebQLCuaHangThucPham/Areas/Admins/Views/AnhSPs/Delete.cshtml
+++ b/BTL_Web/WebQLCuaHangThucPham/WebQLCuaHangThucPham/Areas/Admins/Views/AnhSPs/Delete.cshtml
@@ -5,45 +5,52 @@
     Layout = "~/Areas/Admins/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h2>Delete</h2>
+<div class="content">
+    <div class="card">
+        <!-- /.card-header -->
+        <div class="card-body">
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>AnhSP</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.MaSP)
-        </dt>
+            <div class="form-horizontal ">
 
-        <dd>
-            @Html.DisplayFor(model => model.MaSP)
-        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.TenAnh)
-        </dt>
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                @Html.HiddenFor(model => model.MaAnh)
 
-        <dd>
-            @Html.DisplayFor(model => model.TenAnh)
-        </dd>
+                <div class="form-group d-flex">
+                    @Html.LabelFor(model => model.TenAnh, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.TenAnh, new { htmlAttributes = new { @class = "form-control", @readOnly = "readdonly" } })
+                        @Html.ValidationMessageFor(model => model.TenAnh, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="form-group d-flex">
+                    @Html.LabelFor(model => model.MaSP, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        <input type="text" name="name" value="@Model.SanPham.TenSP"  class="form-control" readOnly />
+                        @Html.ValidationMessageFor(model => model.MaSP, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="form-group d-flex">
+                    @Html.LabelFor(model => model.URL, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        <img src="~/Content/Frond/img/@Model.URL" width="150px" alt="Alternate Text" />
+                        @Html.ValidationMessageFor(model => model.MaSP, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                
 
-        <dt>
-            @Html.DisplayNameFor(model => model.URL)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.URL)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+                <div class="form-group d-flex w-100">
+                    <div class="col-md-12 d-flex justify-content-end">
+                        <input type="submit" value="Xóa" class="btn btn-success mr-1" />
+                        <a href="/admins/Anhsps/" class="btn btn-danger mx-1">Quay lại</a>
+                    </div>
+                </div>
+            </div>
+            }
         </div>
-    }
+    </div>
 </div>
+
