--- a/BTL_Web/WebQLCuaHangThucPham/WebQLCuaHangThucPham/Areas/Admins/Views/GiaSPs/Delete.cshtml
+++ b/BTL_Web/WebQLCuaHangThucPham/WebQLCuaHangThucPham/Areas/Admins/Views/GiaSPs/Delete.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Delete";
-    Layout = "~/Views/Shared/_LayoutTrangChu.cshtml";
+    Layout = "~/Areas/Admins/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <h2>Delete</h2>
@@ -12,14 +12,6 @@
     <h4>GiaSP</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.MaSP)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.MaSP)
-        </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.Gia)
         </dt>
@@ -42,6 +34,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.Time_End)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.SanPham.TenSP)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.SanPham.TenSP)
         </dd>
 
     </dl>
