--- a/BTL_Web/WebQLCuaHangThucPham/WebQLCuaHangThucPham/Areas/Admins/Views/KhachHangs/Create.cshtml
+++ b/BTL_Web/WebQLCuaHangThucPham/WebQLCuaHangThucPham/Areas/Admins/Views/KhachHangs/Create.cshtml
@@ -14,13 +14,6 @@
             <div class="form-horizontal row d-flex">
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="col-md-6">
-                    <div class="form-group d-flex ">
-                        @Html.LabelFor(model => model.MaKH, htmlAttributes: new { @class = "control-label col-md-3" })
-                        <div class="col-md-9">
-                            @Html.EditorFor(model => model.MaKH, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.MaKH, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
                     <div class="form-group d-flex">
                         @Html.LabelFor(model => model.HoTen, htmlAttributes: new { @class = "control-label col-md-3" })
                         <div class="col-md-9">
@@ -29,19 +22,21 @@
                         </div>
                     </div>
                     <div class="form-group d-flex">
-                        @Html.LabelFor(model => model.GioiTinh, htmlAttributes: new { @class = "control-label col-md-3" })
+                        @Html.LabelFor(model => model.TaiKhoan, htmlAttributes: new { @class = "control-label col-md-3" })
                         <div class="col-md-9">
-                            @Html.EditorFor(model => model.GioiTinh, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.GioiTinh, "", new { @class = "text-danger" })
+                            @Html.EditorFor(model => model.TaiKhoan, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.TaiKhoan, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="form-group d-flex">
-                        @Html.LabelFor(model => model.Tuoi, htmlAttributes: new { @class = "control-label col-md-3" })
+                        @Html.LabelFor(model => model.MatKhau, htmlAttributes: new { @class = "control-label col-md-3" })
                         <div class="col-md-9">
-                            @Html.EditorFor(model => model.Tuoi, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Tuoi, "", new { @class = "text-danger" })
+                            @Html.EditorFor(model => model.MatKhau, new { htmlAttributes = new { @class = "form-control" ,Type = "password"} })
+                            @Html.ValidationMessageFor(model => model.MatKhau, "", new { @class = "text-danger" })
                         </div>
                     </div>
+
+
                     <div class="form-group d-flex">
                         @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-3" })
                         <div class="col-md-9">
@@ -56,6 +51,14 @@
                             @Html.ValidationMessageFor(model => model.SDT, "", new { @class = "text-danger" })
                         </div>
                     </div>
+                    <div class="form-group d-flex">
+                        @Html.LabelFor(model => model.DiaChi, htmlAttributes: new { @class = "control-label col-md-3" })
+                        <div class="col-md-9">
+                            @Html.EditorFor(model => model.DiaChi, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.DiaChi, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
 
 
 
