--- a/BTL_Web/WebQLCuaHangThucPham/WebQLCuaHangThucPham/Areas/Admins/Views/LoaiSPs/Delete.cshtml
+++ b/BTL_Web/WebQLCuaHangThucPham/WebQLCuaHangThucPham/Areas/Admins/Views/LoaiSPs/Delete.cshtml
@@ -5,69 +5,76 @@
     Layout = "~/Areas/Admins/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h2>Delete</h2>
+<div class="content">
+    <div class="card">
+        <!-- /.card-header -->
+        <div class="card-body">
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>LoaiSP</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.TenLoai)
-        </dt>
+            <div class="form-horizontal ">
 
-        <dd>
-            @Html.DisplayFor(model => model.TenLoai)
-        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Time_Create)
-        </dt>
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                @Html.HiddenFor(model => model.MaLoai)
 
-        <dd>
-            @Html.DisplayFor(model => model.Time_Create)
-        </dd>
+                <div class="form-group d-flex">
+                    @Html.LabelFor(model => model.TenLoai, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.TenLoai, new { htmlAttributes = new { @class = "form-control", @readOnly = "readdonly" } })
+                        @Html.ValidationMessageFor(model => model.TenLoai, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="form-group d-flex">
+                    @Html.LabelFor(model => model.Time_Create, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Time_Create, new { htmlAttributes = new { @class = "form-control", @readOnly = "readdonly" } })
+                        @Html.ValidationMessageFor(model => model.Time_Create, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="form-group d-flex">
+                    @Html.LabelFor(model => model.Time_Update, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Time_Update, new { htmlAttributes = new { @class = "form-control", @readOnly = "readdonly" } })
+                        @Html.ValidationMessageFor(model => model.Time_Update, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="form-group d-flex d-flex">
+                    @Html.LabelFor(model => model.isActive, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10 d-flex" style="pointer-events:none">
+                        <div class="d-flex align-items-center">
+                            <input type="radio" name="ISACTIVE" id="ISACTIVE1" value="0" @if (Model.isActive == 0) { <text> checked</text>} />
+                            <label for="ISACTIVE1" class="text-success ml-1">Hoạt động</label>
+                        </div>
+                        <div class="d-flex align-items-center ml-2">
+                            <input type="radio" name="ISACTIVE" id="ISACTIVE2" value="1" @if (Model.isActive == 1) { <text> checked</text>} />
+                            <label for="ISACTIVE2" class="text-danger ml-1">Đang khóa</label>
+                        </div>
+                        @Html.ValidationMessageFor(model => model.isActive, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="form-group d-flex">
+                    @Html.LabelFor(model => model.Time_Create, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Time_Create, new { htmlAttributes = new { @class = "form-control", @readOnly = "readdonly" } })
+                        @Html.ValidationMessageFor(model => model.Time_Create, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Time_Update)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Time_Update)
-        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.NguoiTao)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.NguoiTao)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.isActive)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.isActive)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.isDelete)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.isDelete)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+                <div class="form-group d-flex w-100">
+                    <div class="col-md-12 d-flex justify-content-end">
+                        <input type="submit" value="Xóa" class="btn btn-success mr-1" />
+                        <a href="/admins/pttts/" class="btn btn-danger mx-1">Quay lại</a>
+                    </div>
+                </div>
+            </div>
+            }
         </div>
-    }
+    </div>
 </div>
+
