--- a/BTL_Web/WebQLCuaHangThucPham/WebQLCuaHangThucPham/Areas/Admins/Views/LoaiSPs/Edit.cshtml
+++ b/BTL_Web/WebQLCuaHangThucPham/WebQLCuaHangThucPham/Areas/Admins/Views/LoaiSPs/Edit.cshtml
@@ -48,7 +48,7 @@
                     <div class="form-group d-flex w-100">
                         <div class="col-md-12 d-flex justify-content-end">
                             <input type="submit" value="Ghi lại" class="btn btn-success mr-1" />
-                            <a href="/admins/categories/" class="btn btn-danger mx-1">Quay lại</a>
+                            <a href="/admins/Loaisps/" class="btn btn-danger mx-1">Quay lại</a>
                         </div>
                     </div>
                 </div>            }
