--- a/BTL_Web/WebQLCuaHangThucPham/WebQLCuaHangThucPham/Areas/Admins/Views/LoaiSPs/Index.cshtml
+++ b/BTL_Web/WebQLCuaHangThucPham/WebQLCuaHangThucPham/Areas/Admins/Views/LoaiSPs/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<WebQLCuaHangThucPham.Models.LoaiSP>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Loại Sản Phẩm";
     Layout = "~/Areas/Admins/Views/Shared/_LayoutAdmin.cshtml";
 }
 <div class="content">
@@ -56,9 +56,7 @@
                             <a href="/admins/LoaiSPs/edit/@item.MaLoai">
                                 <i class="fas fa-edit"></i>
                             </a>
-                            <a href="/admins/loaisps/details/@item.MaLoai">
-                                <i class="fas fa-eye"></i>
-                            </a>
+                            
                             <a href="/admins/loaisps/Delete/@item.MaLoai">
                                 <i class="fas fa-trash-alt"></i>
                             </a>
