--- a/BTL_Web/WebQLCuaHangThucPham/WebQLCuaHangThucPham/Areas/Admins/Views/PTTTs/Delete.cshtml
+++ b/BTL_Web/WebQLCuaHangThucPham/WebQLCuaHangThucPham/Areas/Admins/Views/PTTTs/Delete.cshtml
@@ -2,72 +2,43 @@
 
 @{
     ViewBag.Title = "Delete";
-    Layout = "~/Views/Shared/_LayoutTrangChu.cshtml";
+    Layout = "~/Areas/Admins/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h2>Delete</h2>
+<div class="content">
+    <div class="card">
+        <!-- /.card-header -->
+        <div class="card-body">
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>PTTT</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.TenPT)
-        </dt>
+            <div class="form-horizontal ">
 
-        <dd>
-            @Html.DisplayFor(model => model.TenPT)
-        </dd>
+                <h4>Are you sure you want to delete this?</h4>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Time_Create)
-        </dt>
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                @Html.HiddenFor(model => model.MaPTTT)
 
-        <dd>
-            @Html.DisplayFor(model => model.Time_Create)
-        </dd>
+                <div class="form-group d-flex">
+                    @Html.LabelFor(model => model.TenPT, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.TenPT, new { htmlAttributes = new { @class = "form-control", @readOnly = "readdonly" } })
+                        @Html.ValidationMessageFor(model => model.TenPT, "", new { @class = "text-danger" })
+                    </div>
+                </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Time_Update)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Time_Update)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.NguoiTao)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.NguoiTao)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.isActive)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.isActive)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.isDelete)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.isDelete)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+                <div class="form-group d-flex w-100">
+                    <div class="col-md-12 d-flex justify-content-end">
+                        <input type="submit" value="Xóa" class="btn btn-success mr-1" />
+                        <a href="/admins/PTTts/" class="btn btn-danger mx-1">Quay lại</a>
+                    </div>
+                </div>
+            </div>
+            }
         </div>
-    }
+    </div>
 </div>
+
+
+
