--- a/BTL_Web/WebQLCuaHangThucPham/WebQLCuaHangThucPham/Areas/Admins/Views/SanPhams/Create.cshtml
+++ b/BTL_Web/WebQLCuaHangThucPham/WebQLCuaHangThucPham/Areas/Admins/Views/SanPhams/Create.cshtml
@@ -11,74 +11,66 @@
         {
             @Html.AntiForgeryToken()
 
-            <div class="form-horizontal row d-flex">
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="col-md-6">
-                    <div class="form-group d-flex ">
-                        @Html.LabelFor(model => model.MaSP, htmlAttributes: new { @class = "control-label col-md-3" })
-                        <div class="col-md-9">
-                            @Html.EditorFor(model => model.MaSP, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.MaSP, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <div class="form-group d-flex">
-                        @Html.LabelFor(model => model.TenSP, htmlAttributes: new { @class = "control-label col-md-3" })
-                        <div class="col-md-9">
-                            @Html.EditorFor(model => model.TenSP, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.TenSP, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <div class="form-group d-flex">
-                        @Html.LabelFor(model => model.SL, htmlAttributes: new { @class = "control-label col-md-3" })
-                        <div class="col-md-9">
-                            @Html.EditorFor(model => model.SL, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.SL, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
+        <div class="form-horizontal ">
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            
+            <div class="form-group row">
 
-
-                </div>
-
-                <div class="col-md-6">
-                    <div class="form-group d-flex">
-                        @Html.LabelFor(model => model.MaLoai, "MaLoai", htmlAttributes: new { @class = "control-label col-md-3" })
-                        <div class="col-md-9">
-                            @Html.DropDownList("MaLoai", null, htmlAttributes: new { @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.MaLoai, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-
-
-
-                    <div class="form-group d-flex">
-                        @Html.LabelFor(model => model.isActive, htmlAttributes: new { @class = "control-label col-md-3" })
-                        <div class="col-md-9 d-flex">
-                            <div class="d-flex align-items-center">
-                                <input type="radio" name="isActive" id="isActive1" value="0" checked />
-                                <label for="ISACTIVE1" class="text-success ml-1">Hoạt động</label>
-                            </div>
-                            <div class="d-flex align-items-center ml-2">
-                                <input type="radio" name="isActive" id="isActive2" value="1" />
-                                <label for="ISACTIVE2" class="text-danger ml-1">Đang khóa</label>
-                            </div>
-                            @Html.ValidationMessageFor(model => model.isActive, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <div class="form-group d-flex">
-                        @Html.LabelFor(model => model.GTSP, htmlAttributes: new { @class = "control-label col-md-3" })
-                        <div class="col-md-9">
-                            <textarea name="GTSP" id="GTSP" class="form-control"></textarea>
-                            @Html.ValidationMessageFor(model => model.GTSP, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group w-100">
-                    <div class="col-md-12 d-flex justify-content-end">
-                        <input type="submit" value="Ghi lại" class="btn btn-success mr-1" />
-                        <a href="index" class="btn btn-danger mx-1">Quay lại</a>
-                    </div>
+                @Html.LabelFor(model => model.MaSP, htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-9">
+                    @Html.EditorFor(model => model.MaSP, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.MaSP, "", new { @class = "text-danger" })
                 </div>
             </div>
+            <div class="form-group row ">
+                @Html.LabelFor(model => model.TenSP, htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-9">
+                    @Html.EditorFor(model => model.TenSP, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.TenSP, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group row">
+                @Html.LabelFor(model => model.SL, htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-9">
+                    @Html.EditorFor(model => model.SL, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.SL, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group row">
+                @Html.LabelFor(model => model.MaLoai, "MaLoai", htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-9">
+                    @Html.DropDownList("MaLoai", null, htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.MaLoai, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group row">
+                @Html.LabelFor(model => model.isActive, htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-9 d-flex">
+                    <div class="d-flex align-items-center">
+                        <input type="radio" name="isActive" id="isActive1" value="0" checked />
+                        <label for="ISACTIVE1" class="text-success ml-1">Hoạt động</label>
+                    </div>
+                    <div class="d-flex align-items-center ml-2">
+                        <input type="radio" name="isActive" id="isActive2" value="1" />
+                        <label for="ISACTIVE2" class="text-danger ml-1">Đang khóa</label>
+                    </div>
+                    @Html.ValidationMessageFor(model => model.isActive, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group row">
+                @Html.LabelFor(model => model.GTSP, htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-9">
+                    <textarea name="GTSP" id="GTSP" class="form-control"></textarea>
+                    @Html.ValidationMessageFor(model => model.GTSP, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group w-100">
+                <div class="col-md-12 d-flex justify-content-end">
+                    <input type="submit" value="Ghi lại" class="btn btn-success mr-1" />
+                    <a href="index" class="btn btn-danger mx-1">Quay lại</a>
+                </div>
+            </div>
+        </div>
         }
 
     </div>
