--- a/BTL_Web/WebQLCuaHangThucPham/WebQLCuaHangThucPham/Areas/Admins/Views/SanPhams/Edit.cshtml
+++ b/BTL_Web/WebQLCuaHangThucPham/WebQLCuaHangThucPham/Areas/Admins/Views/SanPhams/Edit.cshtml
@@ -43,9 +43,9 @@
                         </div>
 
                         <div class="form-group d-flex">
-                            @Html.LabelFor(model => model.MaLoai, htmlAttributes: new { @class = "control-label col-md-2" })
+                            @Html.LabelFor(model => model.MaLoai, "MaLoai", htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
-                                @Html.DropDownList("MaLoai", null, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.DropDownList("MaLoai", null, htmlAttributes: new { @class = "form-control" })
                                 @Html.ValidationMessageFor(model => model.MaLoai, "", new { @class = "text-danger" })
                             </div>
                         </div>
