--- a/BTL_Web/WebQLCuaHangThucPham/WebQLCuaHangThucPham/Areas/Admins/Views/Shared/_asideBar.cshtml
+++ b/BTL_Web/WebQLCuaHangThucPham/WebQLCuaHangThucPham/Areas/Admins/Views/Shared/_asideBar.cshtml
@@ -1,19 +1,19 @@
 ﻿<aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
-    <a href="index3.html" class="brand-link">
-        <img src="/Content/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-        <span class="brand-text font-weight-light">AdminLTE 3</span>
-    </a>
+    <!--<a href="index3.html" class="brand-link">-->
+        @*<img src="/Content/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">*@
+        <!--<span class="brand-text font-weight-light">Quản Lý</span>
+    </a>-->
 
     <!-- Sidebar -->
     <div class="sidebar">
         <!-- Sidebar user panel (optional) -->
         <div class="user-panel mt-3 pb-3 mb-3 d-flex">
             <div class="image">
-                <img src="/Content/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
+                <img src="~/Images/product-11-470x470-100x100.jpg" class="img-circle elevation-2" alt="User Image">
             </div>
             <div class="info">
-                <a href="#" class="d-block">Alexander Pierce</a>
+                <a href="#" class="d-block">BTL Nhóm 6 - CNTT2</a>
             </div>
         </div>
 
@@ -21,25 +21,7 @@
         <!-- Sidebar Menu -->
         <nav class="mt-2">
             <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-                <!-- Add icons to the links using the .nav-icon class
-                with font-awesome or any other icon font library -->
-                <li class="nav-item menu-open">
-                    <a href="/admins/admins/" class="nav-link active">
-                        <i class="nav-icon fas fa-tachometer-alt"></i>
-                        <p>
-                            Dashboard
-                        </p>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="pages/widgets.html" class="nav-link">
-                        <i class="nav-icon fas fa-th"></i>
-                        <p>
-                            Widgets
-                            <span class="right badge badge-danger">New</span>
-                        </p>
-                    </a>
-                </li>
+
                 <li class="nav-item">
                     <a href="/admins/configurations/" class="nav-link">
                         <i class="nav-icon fas fa-th"></i>
@@ -54,20 +36,32 @@
                         <p>
                             Danh mục
                             <i class="fas fa-angle-left right"></i>
-                            <span class="badge badge-info right">6</span>
+                            @*<span class="badge badge-info right">6</span>*@
                         </p>
                     </a>
                     <ul class="nav nav-treeview">
                         <li class="nav-item">
-                            <a href="/Admins/categories/" class="nav-link">
+                            <a href="/Admins/LoaiSPs/" class="nav-link ">
                                 <i class="far fa-circle nav-icon"></i>
-                                <p>Danh mục loại sản phẩm</p>
+                                <p>Loại sản phẩm</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="/Admins/product/" class="nav-link">
+                            <a href="/Admins/AnhSPs/" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
-                                <p>Danh mục sản phẩm</p>
+                                <p>Ảnh Sản Phẩm</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="/Admins/giasps/" class="nav-link">
+                                <i class="far fa-circle nav-icon"></i>
+                                <p>Giá Sản Phẩm</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="/Admins/PTTTs/" class="nav-link">
+                                <i class="far fa-circle nav-icon"></i>
+                                <p>Phương thức thanh toán</p>
                             </a>
                         </li>
                     </ul>
@@ -94,6 +88,44 @@
                                 <p>Tin tức bài viết</p>
                             </a>
                         </li>
+                    </ul>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">
+                        <i class="nav-icon fas fa-copy"></i>
+                        <p>
+                            Quản Lý Sản Phẩm
+                            <i class="fas fa-angle-left right"></i>
+                            @*<span class="badge badge-info right">6</span>*@
+                        </p>
+                    </a>
+                    <ul class="nav nav-treeview">
+                        <li class="nav-item">
+                            <a href="/Admins/SanPhams/" class="nav-link ">
+                                <i class="far fa-circle nav-icon"></i>
+                                <p>Sản Phẩm</p>
+                            </a>
+                        </li>
+
+                    </ul>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">
+                        <i class="nav-icon fas fa-copy"></i>
+                        <p>
+                            Quản Lý Khách hàng
+                            <i class="fas fa-angle-left right"></i>
+                            @*<span class="badge badge-info right">6</span>*@
+                        </p>
+                    </a>
+                    <ul class="nav nav-treeview">
+                        <li class="nav-item">
+                            <a href="/Admins/KhachHangs/" class="nav-link ">
+                                <i class="far fa-circle nav-icon"></i>
+                                <p>Khách Hàng</p>
+                            </a>
+                        </li>
+
                     </ul>
                 </li>
             </ul>
